# threat-to-governance-pipeline

./: .dockerignore  .gitignore  Dockerfile  EXPERIMENTS_9_11.md  README.md  docker-compose.yml  generate_figures.py  nginx.conf  pyproject.toml  run_experiments.py
.claude/: CLAUDE.md
api/: main.py
configs/: model_configs.yaml
k8s/: experiment-job.yaml  namespace.yaml  results-api.yaml  storage.yaml
notebooks/: 01_cert_baseline.ipynb  02_feature_transfer.ipynb  03_agent_detection.ipynb  04_owasp_mapping.ipynb  05_governance_analysis.ipynb
paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
results/: governance_report.md
results/tables/: experiment_10_temporal.json  experiment_11_atlas.json  experiment_12_real_owasp.json  experiment_13_sensitivity.json  experiment_1_baselines.json  experiment_2_transfer.json  experiment_3_owasp.json  experiment_4_governance.json  experiment_5_distillation.json  experiment_6_decomposition.json  experiment_7_mcp_transfer.json  experiment_8_hybrid.json  experiment_9_adversarial.json
src/: __init__.py
src/data/: __init__.py  agent_harm_loader.py  atbench_loader.py  cert_loader.py  synthetic_generator.py  trace_loader.py  trail_loader.py
src/evaluation/: __init__.py  metrics.py  owasp_mapper.py  transfer_analysis.py
src/features/: __init__.py  agent_extractor.py  cert_extractor.py  semantic_extractor.py  ubfs_schema.py
src/governance/: __init__.py  assumption_audit.py
src/models/: __init__.py  base.py  deep_clustering.py  (+3 more)
tests/: test_data.py  test_features.py  test_models.py  test_transfer.py
